<package>
    <name>safety_core</name>
    <version>0.0.3</version>
    <description>
        This package provides common interfaces for safety actions and policies.
    </description>
    <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>safety_msgs</build_depend>
    <run_depend>safety_msgs</run_depend>
</package>
