<?xml version="1.0"?>
<package>
  <name>safety_policies</name>
  <version>1.0.0 </version>
  <description>This packages provides safety monitors definition</description>
  <maintainer email="jocamaba1989@gmail.com">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>safety_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <!--build_depend>cv_bridge</build_depend-->
  <build_depend>message_filters</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>safety_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <!--run_depend>cv_bridge</run_depend-->
  <run_depend>message_filters</run_depend>

  <export>
    <safety_core plugin="${prefix}/actions_plugins.xml" />
    <safety_core plugin="${prefix}/policies_plugins.xml" />
  </export>
</package>
